@@ -27,7 +27,7 @@
 #include "nut-ipmi.h"
 
 #define DRIVER_NAME	"IPMI PSU driver"
-#define DRIVER_VERSION	"0.36"
+#define DRIVER_VERSION	"0.37"
 
 /* driver description structure */
 upsdrv_info_t upsdrv_info = {
